QtGui/gen_qevent.h

typedef struct QHoverEvent QHoverEvent;
typedef struct QMouseEvent QMouseEvent;
typedef struct QNativeGestureEvent QNativeGestureEvent;
typedef struct QPoint QPoint;
typedef struct QPointF QPointF;
typedef struct QPointingDevice QPointingDevice;
typedef struct QTabletEvent QTabletEvent;
typedef struct QWheelEvent QWheelEvent;
QPointF* QMouseEvent_localPos(const QMouseEvent* self);
QPointF* QMouseEvent_windowPos(const QMouseEvent* self);
QPointF* QMouseEvent_screenPos(const QMouseEvent* self);
int QMouseEvent_source(const QMouseEvent* self);
int QMouseEvent_flags(const QMouseEvent* self);
bool QMouseEvent_override_virtual_clone(void* self, intptr_t slot);
QMouseEvent* QMouseEvent_virtualbase_clone(const void* self);
bool QMouseEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QMouseEvent_virtualbase_isBeginEvent(const void* self);
bool QMouseEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QMouseEvent_virtualbase_isUpdateEvent(const void* self);
bool QMouseEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QMouseEvent_virtualbase_isEndEvent(const void* self);
bool QMouseEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QMouseEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QMouseEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QMouseEvent_virtualbase_setAccepted(void* self, bool accepted);
void QMouseEvent_delete(QMouseEvent* self);
QHoverEvent* QHoverEvent_new(int type, QPointF* scenePos, QPointF* globalPos, QPointF* oldPos);
QHoverEvent* QHoverEvent_new2(int type, QPointF* pos, QPointF* oldPos);
QHoverEvent* QHoverEvent_new3(int type, QPointF* scenePos, QPointF* globalPos, QPointF* oldPos, int modifiers);
QHoverEvent* QHoverEvent_new4(int type, QPointF* scenePos, QPointF* globalPos, QPointF* oldPos, int modifiers, QPointingDevice* device);
QHoverEvent* QHoverEvent_new5(int type, QPointF* pos, QPointF* oldPos, int modifiers);
QHoverEvent* QHoverEvent_new6(int type, QPointF* pos, QPointF* oldPos, int modifiers, QPointingDevice* device);
QHoverEvent* QHoverEvent_clone(const QHoverEvent* self);
QPoint* QHoverEvent_pos(const QHoverEvent* self);
QPointF* QHoverEvent_posF(const QHoverEvent* self);
bool QHoverEvent_isUpdateEvent(const QHoverEvent* self);
QPoint* QHoverEvent_oldPos(const QHoverEvent* self);
QPointF* QHoverEvent_oldPosF(const QHoverEvent* self);
bool QHoverEvent_override_virtual_clone(void* self, intptr_t slot);
QHoverEvent* QHoverEvent_virtualbase_clone(const void* self);
bool QHoverEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QHoverEvent_virtualbase_isUpdateEvent(const void* self);
bool QHoverEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QHoverEvent_virtualbase_isBeginEvent(const void* self);
bool QHoverEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QHoverEvent_virtualbase_isEndEvent(const void* self);
bool QHoverEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QHoverEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QHoverEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QHoverEvent_virtualbase_setAccepted(void* self, bool accepted);
void QHoverEvent_delete(QHoverEvent* self);
QWheelEvent* QWheelEvent_new(QPointF* pos, QPointF* globalPos, QPoint* pixelDelta, QPoint* angleDelta, int buttons, int modifiers, int phase, bool inverted);
QWheelEvent* QWheelEvent_new2(QPointF* pos, QPointF* globalPos, QPoint* pixelDelta, QPoint* angleDelta, int buttons, int modifiers, int phase, bool inverted, int source);
QWheelEvent* QWheelEvent_new3(QPointF* pos, QPointF* globalPos, QPoint* pixelDelta, QPoint* angleDelta, int buttons, int modifiers, int phase, bool inverted, int source, QPointingDevice* device);
QWheelEvent* QWheelEvent_clone(const QWheelEvent* self);
QPoint* QWheelEvent_pixelDelta(const QWheelEvent* self);
QPoint* QWheelEvent_angleDelta(const QWheelEvent* self);
int QWheelEvent_phase(const QWheelEvent* self);
bool QWheelEvent_inverted(const QWheelEvent* self);
bool QWheelEvent_isInverted(const QWheelEvent* self);
bool QWheelEvent_hasPixelDelta(const QWheelEvent* self);
bool QWheelEvent_isBeginEvent(const QWheelEvent* self);
bool QWheelEvent_isUpdateEvent(const QWheelEvent* self);
bool QWheelEvent_isEndEvent(const QWheelEvent* self);
int QWheelEvent_source(const QWheelEvent* self);
bool QWheelEvent_override_virtual_clone(void* self, intptr_t slot);
QWheelEvent* QWheelEvent_virtualbase_clone(const void* self);
bool QWheelEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QWheelEvent_virtualbase_isBeginEvent(const void* self);
bool QWheelEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QWheelEvent_virtualbase_isUpdateEvent(const void* self);
bool QWheelEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QWheelEvent_virtualbase_isEndEvent(const void* self);
bool QWheelEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QWheelEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QWheelEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QWheelEvent_virtualbase_setAccepted(void* self, bool accepted);
void QWheelEvent_delete(QWheelEvent* self);
QTabletEvent* QTabletEvent_new(int t, QPointingDevice* device, QPointF* pos, QPointF* globalPos, double pressure, float xTilt, float yTilt, float tangentialPressure, double rotation, float z, int keyState, int button, int buttons);
QTabletEvent* QTabletEvent_clone(const QTabletEvent* self);
QPoint* QTabletEvent_pos(const QTabletEvent* self);
QPoint* QTabletEvent_globalPos(const QTabletEvent* self);
QPointF* QTabletEvent_posF(const QTabletEvent* self);
QPointF* QTabletEvent_globalPosF(const QTabletEvent* self);
int QTabletEvent_x(const QTabletEvent* self);
int QTabletEvent_y(const QTabletEvent* self);
int QTabletEvent_globalX(const QTabletEvent* self);
int QTabletEvent_globalY(const QTabletEvent* self);
double QTabletEvent_hiResGlobalX(const QTabletEvent* self);
double QTabletEvent_hiResGlobalY(const QTabletEvent* self);
long long QTabletEvent_uniqueId(const QTabletEvent* self);
double QTabletEvent_pressure(const QTabletEvent* self);
double QTabletEvent_rotation(const QTabletEvent* self);
double QTabletEvent_z(const QTabletEvent* self);
double QTabletEvent_tangentialPressure(const QTabletEvent* self);
double QTabletEvent_xTilt(const QTabletEvent* self);
double QTabletEvent_yTilt(const QTabletEvent* self);
bool QTabletEvent_override_virtual_clone(void* self, intptr_t slot);
QTabletEvent* QTabletEvent_virtualbase_clone(const void* self);
bool QTabletEvent_override_virtual_isBeginEvent(void* self, intptr_t slot);
bool QTabletEvent_virtualbase_isBeginEvent(const void* self);
bool QTabletEvent_override_virtual_isUpdateEvent(void* self, intptr_t slot);
bool QTabletEvent_virtualbase_isUpdateEvent(const void* self);
bool QTabletEvent_override_virtual_isEndEvent(void* self, intptr_t slot);
bool QTabletEvent_virtualbase_isEndEvent(const void* self);
bool QTabletEvent_override_virtual_setTimestamp(void* self, intptr_t slot);
void QTabletEvent_virtualbase_setTimestamp(void* self, unsigned long long timestamp);
bool QTabletEvent_override_virtual_setAccepted(void* self, intptr_t slot);
void QTabletEvent_virtualbase_setAccepted(void* self, bool accepted);
void QTabletEvent_delete(QTabletEvent* self);
QNativeGestureEvent* QNativeGestureEvent_new(int type, QPointingDevice* dev, QPointF* localPos, QPointF* scenePos, QPointF* globalPos, double value, unsigned long long sequenceId, unsigned long long intArgument);