qt6/gen_qevent.nim

proc fcQMouseEvent_localPos(self: pointer, ): pointer {.importc: "QMouseEvent_localPos".}
proc fcQMouseEvent_windowPos(self: pointer, ): pointer {.importc: "QMouseEvent_windowPos".}
proc fcQMouseEvent_screenPos(self: pointer, ): pointer {.importc: "QMouseEvent_screenPos".}
proc fcQMouseEvent_source(self: pointer, ): cint {.importc: "QMouseEvent_source".}
proc fcQMouseEvent_flags(self: pointer, ): cint {.importc: "QMouseEvent_flags".}
proc fQMouseEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QMouseEvent_virtualbase_clone".}
proc fcQMouseEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QMouseEvent_override_virtual_clone".}
proc fQMouseEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QMouseEvent_virtualbase_isBeginEvent".}
proc fcQMouseEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QMouseEvent_override_virtual_isBeginEvent".}
proc fQMouseEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QMouseEvent_virtualbase_isUpdateEvent".}
proc fcQMouseEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QMouseEvent_override_virtual_isUpdateEvent".}
proc fQMouseEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QMouseEvent_virtualbase_isEndEvent".}
proc fcQMouseEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QMouseEvent_override_virtual_isEndEvent".}
proc fQMouseEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QMouseEvent_virtualbase_setTimestamp".}
proc fcQMouseEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QMouseEvent_override_virtual_setTimestamp".}
proc fQMouseEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QMouseEvent_virtualbase_setAccepted".}
proc fcQMouseEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QMouseEvent_override_virtual_setAccepted".}
proc fcQMouseEvent_delete(self: pointer) {.importc: "QMouseEvent_delete".}
proc fcQHoverEvent_new(typeVal: cint, scenePos: pointer, globalPos: pointer, oldPos: pointer): ptr cQHoverEvent {.importc: "QHoverEvent_new".}
proc fcQHoverEvent_new2(typeVal: cint, pos: pointer, oldPos: pointer): ptr cQHoverEvent {.importc: "QHoverEvent_new2".}
proc fcQHoverEvent_new3(typeVal: cint, scenePos: pointer, globalPos: pointer, oldPos: pointer, modifiers: cint): ptr cQHoverEvent {.importc: "QHoverEvent_new3".}
proc fcQHoverEvent_new4(typeVal: cint, scenePos: pointer, globalPos: pointer, oldPos: pointer, modifiers: cint, device: pointer): ptr cQHoverEvent {.importc: "QHoverEvent_new4".}
proc fcQHoverEvent_new5(typeVal: cint, pos: pointer, oldPos: pointer, modifiers: cint): ptr cQHoverEvent {.importc: "QHoverEvent_new5".}
proc fcQHoverEvent_new6(typeVal: cint, pos: pointer, oldPos: pointer, modifiers: cint, device: pointer): ptr cQHoverEvent {.importc: "QHoverEvent_new6".}
proc fcQHoverEvent_clone(self: pointer, ): pointer {.importc: "QHoverEvent_clone".}
proc fcQHoverEvent_pos(self: pointer, ): pointer {.importc: "QHoverEvent_pos".}
proc fcQHoverEvent_posF(self: pointer, ): pointer {.importc: "QHoverEvent_posF".}
proc fcQHoverEvent_isUpdateEvent(self: pointer, ): bool {.importc: "QHoverEvent_isUpdateEvent".}
proc fcQHoverEvent_oldPos(self: pointer, ): pointer {.importc: "QHoverEvent_oldPos".}
proc fcQHoverEvent_oldPosF(self: pointer, ): pointer {.importc: "QHoverEvent_oldPosF".}
proc fQHoverEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QHoverEvent_virtualbase_clone".}
proc fcQHoverEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QHoverEvent_override_virtual_clone".}
proc fQHoverEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QHoverEvent_virtualbase_isUpdateEvent".}
proc fcQHoverEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QHoverEvent_override_virtual_isUpdateEvent".}
proc fQHoverEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QHoverEvent_virtualbase_isBeginEvent".}
proc fcQHoverEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QHoverEvent_override_virtual_isBeginEvent".}
proc fQHoverEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QHoverEvent_virtualbase_isEndEvent".}
proc fcQHoverEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QHoverEvent_override_virtual_isEndEvent".}
proc fQHoverEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QHoverEvent_virtualbase_setTimestamp".}
proc fcQHoverEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QHoverEvent_override_virtual_setTimestamp".}
proc fQHoverEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QHoverEvent_virtualbase_setAccepted".}
proc fcQHoverEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QHoverEvent_override_virtual_setAccepted".}
proc fcQHoverEvent_delete(self: pointer) {.importc: "QHoverEvent_delete".}
proc fcQWheelEvent_new(pos: pointer, globalPos: pointer, pixelDelta: pointer, angleDelta: pointer, buttons: cint, modifiers: cint, phase: cint, inverted: bool): ptr cQWheelEvent {.importc: "QWheelEvent_new".}
proc fcQWheelEvent_new2(pos: pointer, globalPos: pointer, pixelDelta: pointer, angleDelta: pointer, buttons: cint, modifiers: cint, phase: cint, inverted: bool, source: cint): ptr cQWheelEvent {.importc: "QWheelEvent_new2".}
proc fcQWheelEvent_new3(pos: pointer, globalPos: pointer, pixelDelta: pointer, angleDelta: pointer, buttons: cint, modifiers: cint, phase: cint, inverted: bool, source: cint, device: pointer): ptr cQWheelEvent {.importc: "QWheelEvent_new3".}
proc fcQWheelEvent_clone(self: pointer, ): pointer {.importc: "QWheelEvent_clone".}
proc fcQWheelEvent_pixelDelta(self: pointer, ): pointer {.importc: "QWheelEvent_pixelDelta".}
proc fcQWheelEvent_angleDelta(self: pointer, ): pointer {.importc: "QWheelEvent_angleDelta".}
proc fcQWheelEvent_phase(self: pointer, ): cint {.importc: "QWheelEvent_phase".}
proc fcQWheelEvent_inverted(self: pointer, ): bool {.importc: "QWheelEvent_inverted".}
proc fcQWheelEvent_isInverted(self: pointer, ): bool {.importc: "QWheelEvent_isInverted".}
proc fcQWheelEvent_hasPixelDelta(self: pointer, ): bool {.importc: "QWheelEvent_hasPixelDelta".}
proc fcQWheelEvent_isBeginEvent(self: pointer, ): bool {.importc: "QWheelEvent_isBeginEvent".}
proc fcQWheelEvent_isUpdateEvent(self: pointer, ): bool {.importc: "QWheelEvent_isUpdateEvent".}
proc fcQWheelEvent_isEndEvent(self: pointer, ): bool {.importc: "QWheelEvent_isEndEvent".}
proc fcQWheelEvent_source(self: pointer, ): cint {.importc: "QWheelEvent_source".}
proc fQWheelEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QWheelEvent_virtualbase_clone".}
proc fcQWheelEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QWheelEvent_override_virtual_clone".}
proc fQWheelEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QWheelEvent_virtualbase_isBeginEvent".}
proc fcQWheelEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QWheelEvent_override_virtual_isBeginEvent".}
proc fQWheelEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QWheelEvent_virtualbase_isUpdateEvent".}
proc fcQWheelEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QWheelEvent_override_virtual_isUpdateEvent".}
proc fQWheelEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QWheelEvent_virtualbase_isEndEvent".}
proc fcQWheelEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QWheelEvent_override_virtual_isEndEvent".}
proc fQWheelEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QWheelEvent_virtualbase_setTimestamp".}
proc fcQWheelEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QWheelEvent_override_virtual_setTimestamp".}
proc fQWheelEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QWheelEvent_virtualbase_setAccepted".}
proc fcQWheelEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QWheelEvent_override_virtual_setAccepted".}
proc fcQWheelEvent_delete(self: pointer) {.importc: "QWheelEvent_delete".}
proc fcQTabletEvent_new(t: cint, device: pointer, pos: pointer, globalPos: pointer, pressure: float64, xTilt: float32, yTilt: float32, tangentialPressure: float32, rotation: float64, z: float32, keyState: cint, button: cint, buttons: cint): ptr cQTabletEvent {.importc: "QTabletEvent_new".}
proc fcQTabletEvent_clone(self: pointer, ): pointer {.importc: "QTabletEvent_clone".}
proc fcQTabletEvent_pos(self: pointer, ): pointer {.importc: "QTabletEvent_pos".}
proc fcQTabletEvent_globalPos(self: pointer, ): pointer {.importc: "QTabletEvent_globalPos".}
proc fcQTabletEvent_posF(self: pointer, ): pointer {.importc: "QTabletEvent_posF".}
proc fcQTabletEvent_globalPosF(self: pointer, ): pointer {.importc: "QTabletEvent_globalPosF".}
proc fcQTabletEvent_x(self: pointer, ): cint {.importc: "QTabletEvent_x".}
proc fcQTabletEvent_y(self: pointer, ): cint {.importc: "QTabletEvent_y".}
proc fcQTabletEvent_globalX(self: pointer, ): cint {.importc: "QTabletEvent_globalX".}
proc fcQTabletEvent_globalY(self: pointer, ): cint {.importc: "QTabletEvent_globalY".}
proc fcQTabletEvent_hiResGlobalX(self: pointer, ): float64 {.importc: "QTabletEvent_hiResGlobalX".}
proc fcQTabletEvent_hiResGlobalY(self: pointer, ): float64 {.importc: "QTabletEvent_hiResGlobalY".}
proc fcQTabletEvent_uniqueId(self: pointer, ): clonglong {.importc: "QTabletEvent_uniqueId".}
proc fcQTabletEvent_pressure(self: pointer, ): float64 {.importc: "QTabletEvent_pressure".}
proc fcQTabletEvent_rotation(self: pointer, ): float64 {.importc: "QTabletEvent_rotation".}
proc fcQTabletEvent_z(self: pointer, ): float64 {.importc: "QTabletEvent_z".}
proc fcQTabletEvent_tangentialPressure(self: pointer, ): float64 {.importc: "QTabletEvent_tangentialPressure".}
proc fcQTabletEvent_xTilt(self: pointer, ): float64 {.importc: "QTabletEvent_xTilt".}
proc fcQTabletEvent_yTilt(self: pointer, ): float64 {.importc: "QTabletEvent_yTilt".}
proc fQTabletEvent_virtualbase_clone(self: pointer, ): pointer{.importc: "QTabletEvent_virtualbase_clone".}
proc fcQTabletEvent_override_virtual_clone(self: pointer, slot: int) {.importc: "QTabletEvent_override_virtual_clone".}
proc fQTabletEvent_virtualbase_isBeginEvent(self: pointer, ): bool{.importc: "QTabletEvent_virtualbase_isBeginEvent".}
proc fcQTabletEvent_override_virtual_isBeginEvent(self: pointer, slot: int) {.importc: "QTabletEvent_override_virtual_isBeginEvent".}
proc fQTabletEvent_virtualbase_isUpdateEvent(self: pointer, ): bool{.importc: "QTabletEvent_virtualbase_isUpdateEvent".}
proc fcQTabletEvent_override_virtual_isUpdateEvent(self: pointer, slot: int) {.importc: "QTabletEvent_override_virtual_isUpdateEvent".}
proc fQTabletEvent_virtualbase_isEndEvent(self: pointer, ): bool{.importc: "QTabletEvent_virtualbase_isEndEvent".}
proc fcQTabletEvent_override_virtual_isEndEvent(self: pointer, slot: int) {.importc: "QTabletEvent_override_virtual_isEndEvent".}
proc fQTabletEvent_virtualbase_setTimestamp(self: pointer, timestamp: culonglong): void{.importc: "QTabletEvent_virtualbase_setTimestamp".}
proc fcQTabletEvent_override_virtual_setTimestamp(self: pointer, slot: int) {.importc: "QTabletEvent_override_virtual_setTimestamp".}
proc fQTabletEvent_virtualbase_setAccepted(self: pointer, accepted: bool): void{.importc: "QTabletEvent_virtualbase_setAccepted".}
proc fcQTabletEvent_override_virtual_setAccepted(self: pointer, slot: int) {.importc: "QTabletEvent_override_virtual_setAccepted".}
proc fcQTabletEvent_delete(self: pointer) {.importc: "QTabletEvent_delete".}
proc fcQNativeGestureEvent_new(typeVal: cint, dev: pointer, localPos: pointer, scenePos: pointer, globalPos: pointer, value: float64, sequenceId: culonglong, intArgument: culonglong): ptr cQNativeGestureEvent {.importc: "QNativeGestureEvent_new".}
